Add new Page SSO Authentication

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -1643,3 +1643,39 @@ form.dns-zone-records--new-form input[name="subdomain"] {
 .domain-lua-scripting--item .panel-buttons-left {
   padding-right: 20px;
 }
+.azure-sso-title {
+  padding: 25px 0 15px;
+  margin-top: auto;
+  color: #A1A2A5;
+}
+.azure-sso-wrapper {
+  background-color: #F6F6F6;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  min-height: 100%;
+}
+.azure-sso-wrapper .panel-footer {
+  background-color: #fff;
+  margin-top: 20px;
+}
+.azure-sso-wrapper .lead {
+  margin-top: 30px;
+  font-size: 18px;
+  color: #777;
+}
+.azure-sso-wrapper header {
+  border-bottom: 1px solid #EAEAEA;
+}
+.azure-sso-container {
+  background-color: #fff;
+  margin: 0 30px;
+  height: 90vh;
+}
+.azure-sso .header-logo img {
+  padding: 20px;
+  width: 200px;
+}
+.azure-sso .login-link {
+  color: #A1A2A5;
+  padding: 25px;
+}
