Add social authentication (Google)

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -594,6 +594,9 @@ textarea {
 .login_form .input-sm {
   height: 30px;
 }
+.login_form .btn-social i {
+  font-size: 2.5rem;
+}
 .logo {
   display: block;
   height: 68px;
