--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -700,7 +700,23 @@ section[drawer] .side-menu {
   height: 100%;
   padding-left: 12px;
   list-style-type: none;
+  overflow-y: auto;
 }
+
+.side-menu::-webkit-scrollbar {
+  width: 6px;
+}
+
+.side-menu::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px #fff;
+  border-radius: 6px;
+}
+
+.side-menu::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 8px 6px #f7941e;
+  border-radius: 6px;
+}
+
 section[drawer] .side-menu .side-menu-item {
   cursor: pointer;
   display: block;
