--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -32,6 +32,7 @@ section[drawer] {
     height: 100%;
     padding-left: 12px;
     list-style-type: none;
+    overflow-y: auto;
     .side-menu-item {
       cursor: pointer;
       display: block;
@@ -96,6 +97,20 @@ section[drawer] {
       }
     }
   }
+}
+
+.side-menu::-webkit-scrollbar {
+  width: 6px;
+}
+
+.side-menu::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px #fff;
+  border-radius: 6px;
+}
+
+.side-menu::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 8px 6px #f7941e;
+  border-radius: 6px;
 }
 
 //
