Fix right side content scroll issue

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -533,6 +533,9 @@ textarea {
   -moz-box-shadow: none;
   box-shadow: none;
 }
+.hide-vertical-scroll {
+  overflow-y: hidden !important;
+}
 .main_img_container {
   left: 50%;
   position: absolute;
