--- a/code/dev/less/common.less
+++ b/code/dev/less/common.less
@@ -58,3 +58,7 @@ button, input, select, textarea {
   -moz-box-shadow: none;
   box-shadow: none;
 }
+
+.hide-vertical-scroll {
+  overflow-y: hidden !important;
+}
