--- a/code/dev/less/dashboards.less
+++ b/code/dev/less/dashboards.less
@@ -45,6 +45,9 @@ section[drawer] .side-menu .dashboard_menu .side-menu-item.item-title {
       outline: none;
     }
   }
+  .fa{
+    top: -2px;
+  }
 }
 
 // dasboard structure select
