Rebase help popover for New Domain Page

--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -1699,3 +1699,6 @@ form.dns-zone-records--new-form input[name="subdomain"] {
   color: #A1A2A5;
   padding: 25px;
 }
+.inline-block {
+  display: inline-block;
+}
