--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -37,3 +37,8 @@
 .inline-block{
   display: inline-block;
 }
+textarea.inline-block{
+  display: inline-block;
+  float: left;
+  margin-right: 3px;
+}
