--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -32,12 +32,16 @@
 @import "filter-activity-log";
 @import "domain-lua-scripting";
 @import "azure-sso";
-
 // NOTE: global class
-.inline-block{
+.inline-block {
   display: inline-block;
 }
-textarea.inline-block{
+
+label i.fa-question-circle {
+  color: @app-color-blue;
+}
+
+textarea.inline-block {
   display: inline-block;
   float: left;
   margin-right: 3px;
