--- a/code/dev/css/styles.css
+++ b/code/dev/css/styles.css
@@ -518,6 +518,12 @@ textarea {
   background-color: rgba(255, 138, 0, 0.7);
   border-color: #FF8A00;
 }
+.btn.btn-disabled,
+.btn.btn-disabled[disabled] {
+  cursor: not-allowed;
+  background-color: #ccc;
+  border-color: #ccc;
+}
 .btn.btn-warning:hover,
 .btn.btn-warning:focus {
   border-color: #FF8A00;
