Disable css rule in .hide-vertical-scroll

--- a/code/dev/less/common.less
+++ b/code/dev/less/common.less
@@ -67,5 +67,5 @@ button, input, select, textarea {
 }
 
 .hide-vertical-scroll {
-  overflow-y: hidden !important;
+  //overflow-y: hidden !important;
 }
