--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -46,3 +46,11 @@ textarea.inline-block {
   float: left;
   margin-right: 3px;
 }
+
+table {
+  & .actions {
+    & .disabled {
+      opacity: 0.4;
+    }
+  }
+}
