Update directive "domail-select"

--- a/code/dev/less/domains.less
+++ b/code/dev/less/domains.less
@@ -1,4 +1,8 @@
 // styles for the module "domains"
+//directive "domain-select"
+.domain-select{
+  min-width: 300px;
+}
 // section  domain-caching-rules
 .domain-caching-rules {
   &__info {
