Update  "Usage Report" page - add Billing Zones Details

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -32,6 +32,7 @@
 @import "filter-activity-log";
 @import "domain-lua-scripting";
 @import "azure-sso";
+@import "usage-web";
 // NOTE: global class
 .inline-block {
   display: inline-block;
