--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -33,6 +33,8 @@
 @import "domain-lua-scripting";
 @import "azure-sso";
 @import "usage-web";
+@import "loader";
+
 // NOTE: global class
 .inline-block {
   display: inline-block;
