--- a/code/dev/less/login.less
+++ b/code/dev/less/login.less
@@ -12,6 +12,7 @@
 }
 .login-section {
   height: 100%;
+  width: 100vw;
   background: #f2f2f2;
   background-attachment: fixed;
   background-position: center center;
