--- a/code/dev/less/signup.less
+++ b/code/dev/less/signup.less
@@ -5,7 +5,7 @@
     padding-top: 30px;
     padding-bottom: 30px;
     min-height: 100%;
-
+    width: 100%;
     .panel-footer {
       background-color: #fff;
       margin-top: 20px;
