Add new widgets with Mobile Apps analytics

--- a/code/dev/less/widget.less
+++ b/code/dev/less/widget.less
@@ -1,33 +1,47 @@
 .widget {
-  width: 100%;
-  .filter-time-period {
-    display: none;
-  }
-  .reports_charts_title {
-    display: none;
-  }
+    width: 100%;
+    .filter-time-period {
+        display: none;
+    }
+    .reports_charts_title {
+        display: none;
+    }
 }
 
 // change  columns width for modal window "Add new widget"
 @media (min-width: 768px) {
-  .dl-horizontal dt {
-    width: 250px;
-  }
-  .dl-horizontal dd {
-    margin-left: 260px;
-  }
+    .dl-horizontal dt {
+        width: 250px;
+    }
+    .dl-horizontal dd {
+        margin-left: 260px;
+    }
 }
 
 .bluetriangletech {
-  max-height: 395px;
-  overflow: hidden;
-  & iframe {
-    border: 0px inset;
-    min-height: 450px;
-    &.bluetriangletech {
-      &--traffic-info {
-        min-height: 240px;
-      }
+    max-height: 395px;
+    overflow: hidden;
+    & iframe {
+        border: 0px inset;
+        min-height: 450px;
+        &.bluetriangletech {
+            &--traffic-info {
+                min-height: 240px;
+            }
+        }
     }
-  }
+}
+
+.widgets {
+    &-list {
+        min-height: 50vh;
+        max-height: 60vh;
+        overflow: auto;
+    }
+    &--mobile-rps-chart {
+        h3,
+        .clearfix {
+            display: none
+        }
+    }
 }
