Show all domains in SSL Certificates Page

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -195,6 +195,7 @@ table {
       }
     }
     .company-names,
+    .domains-alternative-names,
     .purge-job-snippets,
     .source-name {
       white-space: normal;
