Fix logo image styles issue

--- a/code/dev/less/sidebar.less
+++ b/code/dev/less/sidebar.less
@@ -21,11 +21,11 @@ section[drawer] {
     height: @app-top-menu-height;
     background: transparent;
     img {
-      margin-top: 15px;
+      margin-top: 4px;
       margin-bottom: 5px;
       vertical-align: middle;
-      margin-left: 25%;
-      width: 50%;
+      margin-left: 13%;
+      width: 158px;
     }
   }
   .navbar-logo{
