Add widget Apps Analitycs - Bandwidth graph

--- a/code/dev/less/widget.less
+++ b/code/dev/less/widget.less
@@ -38,7 +38,7 @@
         max-height: 60vh;
         overflow: auto;
     }
-    &--mobile-rps-chart {
+    &--mobile-rps-chart, &--mobile-bw-chart {
         h3,
         .clearfix {
             display: none
