--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -187,11 +187,16 @@ table {
       }
     }
     .actions {
+      overflow: hidden;
       a {
         margin-right: 10px;
       }
       .not-active {
         opacity: 0.65;
+      }
+      &--wrap{
+        width: 100%;
+        overflow: auto;
       }
     }
     .company-names,
