Add horizontal scroll for Accounts, Keys, Log Shipping , Users

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -158,6 +158,10 @@ section[main] {
   margin-bottom: 1em;
 }
 
+.table-responsive .table{
+   min-width: 100%;
+   width: auto;
+}
 table {
   table-layout: fixed !important;
 }
