--- a/code/dev/less/login.less
+++ b/code/dev/less/login.less
@@ -10,7 +10,7 @@
   }
 }
 .login-section {
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   background: #f2f2f2;
   background-attachment: fixed;
