Standardize the logo on all pages

--- a/code/dev/less/login.less
+++ b/code/dev/less/login.less
@@ -4,10 +4,6 @@
   top: 50%;
   transform: translate(-50%, -50%);
   width: 300px;
-
-  img {
-    width: 100%;
-  }
 }
 .login-section {
   height: 100vh;
@@ -75,17 +71,11 @@
   }
 }
 
-.logo {
+div.logo {
   display: block;
-  height: 68px;
-  left: 35px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
-  padding-top: 10px;
-  width: 231px;
-
-  img {
-    width: 100%;
-  }
+  padding-top: 20px;
+  width: 200px;
 }
