--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -36,6 +36,9 @@
 @import "loader";
 
 // NOTE: global class
+.block-center {
+  text-align: center;
+}
 .inline-block {
   display: inline-block;
 }
