Add instruction for registration

--- a/code/dev/less/signup.less
+++ b/code/dev/less/signup.less
@@ -68,3 +68,13 @@ form.new-user-form {
 .form-action {
   padding: 12.5px 0;
 }
+.form-contact-info{
+  &--full{
+    .form-control.inline-block{
+      width: 95%;
+    }
+  }
+}
+ol.list-instruction{
+  text-align: justify;
+}
