Add scroll on Sign Up  Page (full mode)

--- a/code/dev/less/signup.less
+++ b/code/dev/less/signup.less
@@ -21,6 +21,9 @@
         @media (min-width: 992px) {
             & .affix {
                 position: fixed;
+                bottom: 0px;
+                top: 140px;
+                overflow: scroll;
             }
         }
         @media (max-width: 992px) {
