Fix Sing Up Page for small screens

--- a/code/dev/less/signup.less
+++ b/code/dev/less/signup.less
@@ -96,7 +96,8 @@ form.new-user-form {
         }
     }
 }
-
-ol.list-instruction {
-    text-align: justify;
+.signup-container{
+  ol.list-instruction, ul.list-information, p.information {
+      text-align: justify;
+  }
 }
