Update Style Usage Report

--- a/code/dev/less/usage-web.less
+++ b/code/dev/less/usage-web.less
@@ -1,5 +1,14 @@
 // NOTE: styly for Usage Report Page
-.container-billing-zones-details{
-  max-height: 50vh;
-  overflow-y: overlay;
+.container-billing-zones-details {
+    max-height: 50vh;
+    overflow-y: overlay;
+}
+
+.usage-report{
+   & .form-control {
+      background: @app-color-white;
+      border: 0px;
+      border-bottom: 1px solid #777;
+      border-radius: 0px;
+    }
 }
