Add DNS Analytics module

--- a/code/dev/less/styles.less
+++ b/code/dev/less/styles.less
@@ -33,6 +33,7 @@
 @import "domain-lua-scripting";
 @import "azure-sso";
 @import "usage-web";
+@import "dns_analytics";
 @import "loader";
 
 // NOTE: global class
