Add new widget "Third-Party Integrations"

--- a/code/dev/less/widget.less
+++ b/code/dev/less/widget.less
@@ -32,6 +32,14 @@
     }
 }
 
+.thirdpartyiframe{
+    max-height: 395px;
+    overflow: hidden;
+    & iframe {
+        border: 0px inset;
+        min-height: 450px;
+    }
+}
 .widgets {
     &-list {
         min-height: 50vh;
