--- a/code/dev/parts/waf_rules/view/waf-rules-list__custom.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__custom.tpl.html
@@ -23,13 +23,17 @@
           <th><a href="" ng-click="order('updated_at')">Updated At</a>
             <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
           </th>
-          <th><a href="" ng-click="order('updated_by')">Updated By</a>
+          <th ng-if="auth.isRevadmin()"><a href="" ng-click="order('updated_by')">Updated By</a>
             <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
           </th>
           <!--<th ng-if="auth.isRevadmin()"> <a href="" ng-click="order('domains')">Used By Domains</a>
             <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span></th>-->
           <th class="thin">Status</th>
           <th>Actions</th>
+          <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
+            <a href="" ng-click="order('companyName')">Account</a>
+            <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
+          </th>
         </tr>
       </thead>
       <tbody>
@@ -53,13 +57,15 @@
             <a ui-sref=".edit({id: item.id})" ng-class="{'disabled':isReadOnly()}" ng-if="!item.loading && auth.isRevadmin()" uib-tooltip="Edit WAF Rule">
               <i class="glyphicon glyphicon-pencil"></i>
             </a>
-            <a href="" ng-if="!item.loading" ng-click="duplicateWAFRule(item)" ng-class="{'disabled':isReadOnly()}" uib-tooltip="Duplicate WAF Rule">
+            <a href="" ng-if="!item.loading" ng-click="onDuplicateWAFRule($event,item)" ng-class="{'disabled':isReadOnly()}" uib-tooltip="Duplicate WAF Rule">
               <i class="fa fa-clone"></i>
             </a>
             <a href="" ng-if="!item.loading" ng-click="deleteWAFRule(item)" ng-class="{'disabled':isReadOnly()}" uib-tooltip="Delete WAF Rule">
               <i class="glyphicon glyphicon-trash"></i>
             </a>
-
+          </td>
+          <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
+            <div>{{item.companyName}}</div>
           </td>
         </tr>
       </tbody>
