Fix padding for WAF Locations title

--- a/code/dev/less/domains.less
+++ b/code/dev/less/domains.less
@@ -36,6 +36,11 @@
   }
 }
 
+.domain-waf-locations {
+  .panel-buttons-left {
+    padding-right: 20px;
+  }
+}
 form.domain-edit-form {
   input[type="number"] {
     max-width: 120px;
