--- a/code/dev/less/domains.less
+++ b/code/dev/less/domains.less
@@ -40,6 +40,12 @@
   .panel-buttons-left {
     padding-right: 20px;
   }
+  .location-panel-into--totals{
+     padding-right: 10px;
+  }
+  .duplicateWAFLocationBtn{
+    margin-right: 10px;
+  }
 }
 form.domain-edit-form {
   input[type="number"] {
