Update style for scroll description

--- a/code/dev/less/page.less
+++ b/code/dev/less/page.less
@@ -206,10 +206,12 @@ table {
     .company-names,
     .domains-alternative-names,
     .purge-job-snippets,
+    .description,
     .source-name {
       white-space: normal;
       word-break: break-word;
       max-height: 50px;
+      display: block;
     }
   }
 }
