--- a/code/dev/parts/waf_rules/view/waf-rules-list__builtin.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__builtin.tpl.html
@@ -17,6 +17,9 @@
             <a href="" ng-click="order('rule_name')">Rule Name</a>
             <span class="sortorder" ng-show="filter.predicate === 'rule_name'" ng-class="{reverse: filter.reverse}"></span>
           </th>
+          <th><a href="" ng-click="order('visibility')">Visibility</a>
+            <span class="sortorder" ng-show="filter.predicate === 'visibility'" ng-class="{reverse: filter.reverse}"></span>
+          </th>
           <th><a href="" ng-click="order('comment')">Rule Description</a>
             <span class="sortorder" ng-show="filter.predicate === 'comment'" ng-class="{reverse: filter.reverse}"></span>
           </th>
@@ -26,8 +29,8 @@
           <th ng-if="auth.isRevadmin()"><a href="" ng-click="order('updated_by')">Updated By</a>
             <span class="sortorder" ng-show="filter.predicate === 'updated_by'" ng-class="{reverse: filter.reverse}"></span>
           </th>
-          <th ng-if="auth.isRevadmin()"> <a href="" ng-click="order('domains')">Used By</a>
-            <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span></th>
+          <!-- TODO later <th ng-if="auth.isRevadmin()"> <a href="" ng-click="order('domains')">Used By</a>
+            <span class="sortorder" ng-show="filter.predicate === 'domains'" ng-class="{reverse: filter.reverse}"></span></th>-->
           <th class="thin">Status</th>
           <th>Actions</th>
           <!--<th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
@@ -39,6 +42,7 @@
       <tbody>
         <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
           <td> {{item.rule_name}} </td>
+          <td> {{item.visibility}} </td>
           <td class="description"> {{item.comment}} </td>
           <td>{{getRelativeDate(item.updated_at) }}</td>
           <td ng-if="auth.isRevadmin()">{{item.updated_by}}</td>
@@ -57,7 +61,7 @@
             <a ui-sref=".edit({id: item.id})" ng-if="!item.loading && auth.isRevadmin()" uib-tooltip="Edit WAF Rule">
               <i class="glyphicon glyphicon-pencil"></i>
             </a>
-            <a href="" ng-if="!item.loading && auth.isRevadmin()" ng-click="onDuplicateWAFRule(item)" ng-class="{'disabled':isReadOnly()}"
+            <a href="" ng-if="!item.loading && auth.isRevadmin()" ng-click="onDuplicateWAFRule(e,item)" ng-class="{'disabled':isReadOnly()}"
               uib-tooltip="Duplicate WAF Rule">
               <i class="fa fa-clone"></i>
             </a>
