Capitalize the first letter "Rule Type" by CSS

--- a/code/dev/less/waf-rules.less
+++ b/code/dev/less/waf-rules.less
@@ -10,3 +10,12 @@
     resize: none;
     margin-bottom: 0px;
 }
+
+td {
+   &.waf-rule-type {
+        text-transform: lowercase;
+    }
+   &.waf-rule-type:first-letter {
+        text-transform: uppercase;
+    }
+}
