Update style display column

--- a/code/dev/less/domains.less
+++ b/code/dev/less/domains.less
@@ -46,6 +46,9 @@
   .duplicateWAFLocationBtn{
     margin-right: 10px;
   }
+  table tbody tr td {
+    max-width: none;
+  }
 }
 form.domain-edit-form {
   input[type="number"] {
