--- a/code/dev/less/waf-rules.less
+++ b/code/dev/less/waf-rules.less
@@ -2,6 +2,9 @@
     &__tabs .nav-tabs>li {
         margin-bottom: -6px;
     }
+    &__tabs  table tbody tr td {
+        max-width: none;
+    }
 }
 
 .waf-rule-body--view {
