--- a/code/dev/parts/waf_rules/view/waf-rules-list__builtin.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__builtin.tpl.html
@@ -17,7 +17,7 @@
             <a href="" ng-click="order('rule_name')">Rule Name</a>
             <span class="sortorder" ng-show="filter.predicate === 'rule_name'" ng-class="{reverse: filter.reverse}"></span>
           </th>
-          <th><a href="" ng-click="order('visibility')">Visibility</a>
+          <th ng-if="auth.isRevadmin()"><a href="" ng-click="order('visibility')">Visibility</a>
             <span class="sortorder" ng-show="filter.predicate === 'visibility'" ng-class="{reverse: filter.reverse}"></span>
           </th>
           <th><a href="" ng-click="order('comment')">Rule Description</a>
@@ -45,7 +45,7 @@
             <a href="" ui-sref=".edit({id: item.id})" ng-if="auth.isRevadmin()" uib-tooltip="Edit WAF Rule">{{item.rule_name}}</a>
             <a href="" ng-click="openViewDialogRule(e,item)" ng-if="!auth.isRevadmin()" uib-tooltip="View WAF Rule">{{item.rule_name}}</a>
           </td>
-          <td> {{item.visibility}} </td>
+          <td ng-if="auth.isRevadmin()"> {{item.visibility}} </td>
           <td class="description"> {{item.comment}} </td>
           <td>{{getRelativeDate(item.updated_at) }}</td>
           <td ng-if="auth.isRevadmin()">{{item.updated_by}}</td>
