--- a/code/dev/parts/waf_rules/view/waf-rules-list__custom.tpl.html
+++ b/code/dev/parts/waf_rules/view/waf-rules-list__custom.tpl.html
@@ -38,8 +38,8 @@
       </thead>
       <tbody>
         <tr id="anchor{{::$index}}" ng-click="saveAnchorScrollIndex($index)" ng-repeat="item in filteredRecords | limitTo:filter.limit:filter.skip track by $index">
-          <td> <a href="" ui-sref=".edit({id: item.id})" ng-class="{'disabled':isReadOnly()}" ng-if="!item.loading" ng-show="!auth.isUser()"
-              uib-tooltip="Edit WAF Rule">
+          <td> <a href="" ui-sref="{{isReadOnly() ? '.':'.edit({id: item.id})'}}" ng-class="{'disabled':isReadOnly()}" ng-if="!item.loading" ng-show="!auth.isUser()"
+              uib-tooltip="{{isReadOnly() ?'View WAF Rule':'Edit WAF Rule'}}">
              {{item.rule_name}}</a>
              </td>
           <td class="description"> {{item.comment}} </td>
@@ -57,7 +57,7 @@
             <a href="" ng-click="openViewDialogRule($event,item)" ng-if="!item.loading" uib-tooltip="View WAF Rule">
               <i class="fa fa-eye"></i>
             </a>
-            <a href="" ui-sref=".edit({id: item.id})" ng-class="{'disabled':isReadOnly()}" ng-if="!item.loading" ng-show="!auth.isUser()"
+            <a href="" ui-sref="{{isReadOnly() ?'.':'.edit({id: item.id})'}}" ng-class="{'disabled':isReadOnly()}" ng-if="!item.loading" ng-show="!auth.isUser()"
               uib-tooltip="Edit WAF Rule">
               <i class="glyphicon glyphicon-pencil"></i>
             </a>
